<resources>
    <string name="app_name">Eventorium</string>
    <string name="top_events_title">Top five events</string>
    <string name="top_products_title">Top five products</string>
    <string name="top_services_title">Top five services</string>
    <string name="prompt_more_options_events">Would you like to see more content or search for a specific event?</string>
    <string name="prompt_more_options_products">Would you like to see more content or search for a specific product?</string>
    <string name="prompt_more_options_services">Would you like to see more content or search for a specific service?</string>
    <string name="see_more">See more..</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_as">Register as</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload">Upload</string>
    <string name="role_info_message">   If you would like to organize an event, please register as an "Event Organizer".
                       If you wish to offer your services or products, choose the option to Register as a "Service and Product Provider".
                    As a service provider, you will be prompted to enter information about your company or organization in the next step.
    </string>
    <string name="welcome">WELCOME</string>
    <string name="activation_dialog_title">Info</string>
    <string name="activation_dialog_message">
        Account Activation Required\n\n
        Thank you for signing up!\n\n
        To complete your registration, please follow these steps:\n\n
        1. Check your email: We’ve sent an activation link to the email address you provided.\n
        2. Activate your account: Click the link within 24 hours to confirm your email and activate your account.\n\n
        Important: Your activation link will expire after 24 hours. If you do not activate your account within this time, you will need to repeat the registration process.\n\n
        Thank you for choosing Eventorium!
    </string>
    <string name="password_changed_title">Password changed</string>
    <string name="logout_reason">
        Your password has been successfully changed. For security reasons, please log in again to ensure your account is protected.
    </string>
    <string name="ok_button">OK</string>
    <string name="service_and_product_provider">Service and Product Provider</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="booking_calendar">Booking calendar</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="information_about_company">Enter information about your company</string>
    <string name="description">Description</string>
    <string name="services">Services</string>
    <string name="events">Events</string>
    <string name="products">Products</string>
    <string name="edit_service">Edit service</string>
    <string name="visibility">Visibility</string>
    <string name="availability">Availability</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="confirmation">Confirmation</string>
    <string name="visibility_and_availability">Visibility and Availability</string>
    <string name="duration">Duration</string>
    <string name="deadlines">Deadlines</string>
    <string name="price_and_discount">Price and Discount</string>
    <string name="general">General</string>
    <string name="specificities">Specificities</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="reservation_deadline">Reservation deadline</string>
    <string name="cancellation_deadline">Cancellation deadline</string>
    <string name="minimum_duration">Minimum duration</string>
    <string name="maximum_duration">Maximum duration</string>
    <string name="save">Save</string>
    <string name="service">Service</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis ultrices arcu. Maecenas rhoncus hendrerit lacus a vehicula. Donec finibus tincidunt urna, sed mattis ex dictum quis.</string>
    <string name="photos">Photos</string>
    <string name="category">Category</string>
    <string name="create_service">Create service</string>
    <string name="select_category">Select category</string>
    <string name="suggest_category">Suggest category</string>
    <string name="event_types">Event types</string>
    <string name="visible">Visible</string>
    <string name="available">Available</string>
    <string name="create">Create</string>
    <string name="filter_services">Filter services</string>
    <string name="minimum_price">Minimum price</string>
    <string name="maximum_price">Maximum price</string>
    <string name="enter_invitations">Please enter the email addresses of the special people you’d like to invite to your event</string>
    <string name="send_invitations">Send invitations and create event</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="categories">Categories</string>
    <string name="existing_categories">Existing categories</string>
    <string name="edit_category">Edit category</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="date">Date </string>
    <string name="select_date">Select date</string>
    <string name="category_proposals">Category proposals</string>
    <string name="update_category_proposal">Update category proposal</string>
    <string name="similar_category_exists">A similar category could already exist. You can either update your proposal with this category or choose an existing one from the list.</string>
    <string name="select_existing_category">Select existing category</string>
    <string name="create_category">Create category</string>
    <string name="your_fav_events">Your fav♥ events</string>
    <string name="your_fav_services">Your fav♥ services</string>
    <string name="your_fav_products">Your fav♥ products</string>
    <string name="category_updated_successfully">Category updated successfully!</string>
    <string name="failed_to_update_category">Failed to update category.</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="category_created_successfully">Category created successfully</string>
    <string name="failed_to_create_category">Failed to create category</string>
    <string name="category_deleted_successfully">Category deleted successfully!</string>
    <string name="failed_to_delete_category">Failed to delete category.</string>
    <string name="no_categories_found">No categories found</string>
    <string name="suggest_category_name">Suggest category name</string>
    <string name="suggest_category_description">Suggest category description</string>
    <string name="service_created_successfully">Service created successfully</string>
    <string name="failed_to_create_service">Failed to create service</string>
    <string name="no_services_found">No services found!</string>
    <string name="service_deleted_successfully">Service deleted successfully!</string>
    <string name="failed_to_delete_service">Failed to delete service!</string>
    <string name="failed_to_update_service">Failed to update service!</string>
    <string name="service_updated_successfully">Service updated successfully!</string>
    <string name="successfully_set_the_category">Successfully set the category.</string>
    <string name="failed_to_set_category">Failed to set category!</string>
    <string name="the_service_cannot_be_deleted_because_it_is_currently_reserved">The service cannot be deleted because it is currently reserved.</string>
    <string name="reservation_date_in_past">The cancellation date cannot be in the past.</string>
    <string name="cancellation_date_in_past">The reservation date cannot be in the past.</string>
    <string name="cancellation_after_reservation">Cancellation deadline should be after reservation deadline!</string>
    <string name="product">Product</string>
    <string name="removed_service_from_favourites">Removed service from favourites!</string>
    <string name="removed_product_from_favourites">Removed product from favourites!</string>
    <string name="to_favourites"> to favourites!</string>
    <string name="added_service">"Added service "</string>
    <string name="net_price">Net Price</string>
    <string name="item">Item</string>
    <string name="new_event_type">New event type</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="your_company">Your company</string>
    <string name="new_service">New service</string>
    <string name="price_list">Price list</string>
    <string name="discount_should_be_between_0_and_100">Discount should be between 0 and 100</string>
    <string name="item_has_been_updated_successfully">Item has been updated successfully!</string>
    <string name="download">Download</string>
    <string name="new_event">New event</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="add_new_category">Add new category</string>
    <string name="planned_amount">Planned amount</string>
    <string name="search">Search</string>
    <string name="delete_category">Delete category</string>
    <string name="continue_">Continue</string>
    <string name="join_the_eventorium_community">Join the Eventorium Community</string>
    <string name="profile_photo_not_added">The profile photo has not been added. You can update it later.</string>
    <string name="purchased">Purchased</string>
    <string name="purchase">Purchase</string>
    <string name="already_bought_for_that_category">Already bought for that category!</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="change_password">Change Password</string>
    <string name="report_user">Report user</string>
    <string name="block_user">Block user</string>
    <string name="select_suggested_categories">Select suggested categories…</string>
    <string name="select_at_least_one_category">Select at least one category!</string>
    <string name="user_reports">User reports</string>
    <string name="enter_information_about_product">Enter information about product..</string>
    <string name="images">Images</string>
    <string name="comment_management">Comment management</string>
    <string name="your_invitations">Your invitations</string>
    <string name="event_type_image">Event type image</string>
    <string name="sort_by">Sort by</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="suggest_categories">Suggest categories</string>
</resources>