<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_login"
        android:title="@string/log_in"
        android:icon="@drawable/ic_login" />

    <item
        android:id="@+id/nav_signup"
        android:title="@string/sign_up"
        android:icon="@drawable/ic_account" />

    <item
        android:id="@+id/nav_services"
        android:title="@string/services"
        android:icon="@drawable/ic_info" />

    <item
        android:id="@+id/nav_categories"
        android:title="@string/existing_categories"
        android:icon="@drawable/ic_info" />

    <item
        android:id="@+id/nav_category_proposals"
        android:title="@string/category_proposals"
        android:icon="@drawable/ic_info" />

    <item
        android:id="@+id/nav_create_category"
        android:title="@string/create_category"
        android:icon="@drawable/ic_info" />

    <item
        android:id="@+id/nav_notification"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications" />

    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_message" />

    <item
        android:id="@+id/nav_calendar"
        android:title="@string/booking_calendar"
        android:icon="@drawable/ic_calendar" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout" />

<!--    TODO: delete later, below is just for testing -->
    <item
        android:id="@+id/nav_invitations"
        android:title="Event invitations"
        android:icon="@drawable/ic_fav"/>

    <item
        android:id="@+id/nav_booking"
        android:title="Service booking"
        android:icon="@drawable/ic_fav"/>

    <item
        android:id="@+id/nav_company"
        android:title="Your company"
        android:icon="@drawable/ic_company"/>

</menu>
