<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_primary"
        android:textSize="24sp"
        android:text="@string/sort_by"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radioGroupSortField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <RadioButton
            android:id="@+id/radioDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <RadioButton
            android:id="@+id/radioDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/radioDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending" />
    </RadioGroup>
</LinearLayout>