<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notifications"
            android:icon="@drawable/ic_notifications" />

        <item
            android:id="@+id/nav_messages"
            android:title="@string/messages"
            android:icon="@drawable/ic_message" />

        <!--TODO: DELETE, TEMPORARY!-->
        <item
            android:id="@+id/nav_see_other_profile"
            android:title="See other profile"
            android:icon="@drawable/ic_account" />

        <item
            android:id="@+id/nav_invitations"
            android:title="@string/your_invitations"
            android:icon="@drawable/ic_free_cancelation" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="400" />
    </group>
</menu>