<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/md_theme_primaryContainer">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jejumyeongjo"
            android:gravity="center_horizontal"
            android:text="@string/enter_information_about_product"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="outline"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/description"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/categoriesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/categories"
            android:fontFamily="@font/jejumyeongjo"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categorySelectionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/select_category"
            android:background="@color/md_theme_secondaryContainer"
            app:boxBackgroundMode="outline">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jejumyeongjo"
                android:spinnerMode="dropdown" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/suggestCategoryNameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/suggest_category_name"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/suggestedCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/suggestCategoryDescriptionTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/suggest_category_description"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/suggestedCategoryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/price"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/discountInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/discount"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:fontFamily="@font/jejumyeongjo" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/visibilityBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/visible"
            android:fontFamily="@font/jejumyeongjo" />

        <CheckBox
            android:id="@+id/availabilityBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/available"
            android:fontFamily="@font/jejumyeongjo" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/jejumyeongjo"
            android:text="@string/event_types"
            android:textSize="18sp"
            android:gravity="start"/>

        <LinearLayout
            android:id="@+id/eventTypeCheckboxList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/md_theme_primaryContainer"
            android:padding="10dp"
            android:gravity="center" >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventTypeRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:orientation="vertical"
                android:background="@color/card_background"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_gravity="center" />
        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/jejumyeongjo"
            android:text="@string/images"
            android:textSize="18sp"
            android:gravity="start"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newImages"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/uploadButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_upload"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/upload"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createProductBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/md_theme_primary"
            android:text="@string/create"
            android:fontFamily="@font/jejumyeongjo"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
