<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.event.fragments.eventtype.CreateEventTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_event_type"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEventTypeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/etEventTypeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEventTypeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/etEventTypeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/suggestionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:background="@color/md_theme_tertiaryContainer">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                app:boxBackgroundMode="outline"
                android:background="@color/md_theme_tertiaryContainer"
                app:boxStrokeColor="@color/md_theme_primary">

                <Spinner
                    android:id="@+id/comboBoxCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suggest_categories" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerAddedItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@color/md_theme_tertiaryContainer"
            android:padding="8dp"
            android:divider="@android:color/darker_gray"
            android:showDividers="middle" />

        <LinearLayout
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="152dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/event_type_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:importantForAccessibility="yes"
                android:drawableStart="@drawable/ic_upload"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:backgroundTint="@color/md_theme_primary" />
        </LinearLayout>

        <Button
            android:id="@+id/createEventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create"
            android:backgroundTint="@color/md_theme_primary" />
    </LinearLayout>
</ScrollView>
